--- a/ProjectReport.html
+++ b/ProjectReport.html
@@ -5,11 +5,14 @@
     <head>
         <title> ProjectReport </title>
     </head>
-    <body> 
-        Stephen Kump (stephen.kump@yale.edu) 
-Fed Panfilov (fed.panfilov@yale.edu)
-Raul Monraz (raul.monraz@yale.edu)
-
+    <body>
+    
+    <p> TEAM MEMBERS </p>
+    <ul>
+        <li>Stephen Kump (stephen.kump@yale.edu) </li>
+        <li>Fed Panfilov (fed.panfilov@yale.edu)</li>
+        <li>Raul Monraz (raul.monraz@yale.edu)</li>
+    </ul>
 MGT 656 - Class Project
 Software Development Project Sprint Report
 
